Adding poetry and an empty "Data" file by default. The data with in this file will be ignored by git (all files within this directory will be ignored by git with exception of ".gitkeep"). Additionally adding details to README.md to ease set up.

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -4,32 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clustering Experiment\n",
+    "# Clustering Experiment \n",
+    "#### By: Charbel Marche\n",
     "\n",
-    "In this notebook we collab to create a solution to determining the BP and HR values as well as times using clustering. Currently we are determining only the indiviudal digits, but we need to recognize these as coherent numbers and be able to assign entries to numbers."
+    "We decided to individually tackle the problem using 1 method, and by the time we are all done we will be able to merge our techniques and select the optimal techinque. Currently we are determining only the indiviudal digits, but we need to recognize these as coherent numbers and be able to assign entries to numbers."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Before we start, we need to be able to do some collaboration. \n",
+    "### Register Images to Start\n",
     "\n",
-    "Lets do this using the CodeTogether Live VS code plug in.\n",
-    "\n",
-    "- Search `CodeTogether Live VS code` in the extensions tab on the left-hand side. Download the add-on. \n",
-    "- When you're coding if you want to live collaborate with someone else send them the link that you created when you create a session\n",
-    "\n",
-    "Note: This will not allow for dual cursors. It only allows you guys to both follow along and edit with one another on the same cursor.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Collab\n",
-    "\n",
-    "We should consider collab in my opinion."
+    "To start, we need to register images using a completed version of the NoteBook Ryan shared on email."
    ]
   },
   {
@@ -40,6 +27,13 @@
    "source": [
     "# We cook"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
