--- a/experiments/locating_number_boxes/locating_number_boxes.ipynb
+++ b/experiments/locating_number_boxes/locating_number_boxes.ipynb
@@ -1,9 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b253876c-8d29-4af6-a061-2d4bcea9cb0f",
+   "metadata": {},
+   "source": [
+    "# Locating Number Boxes  \n",
+    "\n",
+    "Author - Ryan Folks  \n",
+    "Purpose - To investigate whether the centroids of a sample of boxes from 10 charts can be used to reliably locate number boxes.  \n",
+    "\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6be0f298-87c6-4934-8a3c-e80ccc625f75",
+   "id": "b308a75e-dddc-47ca-b486-1b9976aaefe4",
    "metadata": {},
    "outputs": [],
    "source": []
