Add proposed solution.

--- a/experiments/locating_number_boxes/locating_number_boxes.ipynb
+++ b/experiments/locating_number_boxes/locating_number_boxes.ipynb
@@ -57,6 +57,31 @@
    "source": [
     "The code section, highlighted in red above, is an example of number boxes."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87eadf10-c2af-495f-9c15-7781bed78c44",
+   "metadata": {},
+   "source": [
+    "## 0.1 - Proposed Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ef7516c7-cfff-4fe6-b2f9-b7eddfeb2f6b",
+   "metadata": {},
+   "source": [
+    "Image registration works so well in the normal case that the locations of the number boxes should be very standardized.  \n",
+    "This allows us to find the centroids of a sample of every number box on the image post-registration, and match future handwritten number detections to a box by finding the number box centroid which has the minimum distance to the number detection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4c3fbcf8-e5ff-4c93-8eee-ff1460d72000",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
