Add packages section.

--- a/experiments/locating_number_boxes/locating_number_boxes.ipynb
+++ b/experiments/locating_number_boxes/locating_number_boxes.ipynb
@@ -26,7 +26,7 @@
    "id": "b2f46aae-7e75-48a1-82ba-1952ad75f1f7",
    "metadata": {},
    "source": [
-    "## 0.0 - The Number Box"
+    "### 0.0 - The Number Box"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "id": "87eadf10-c2af-495f-9c15-7781bed78c44",
    "metadata": {},
    "source": [
-    "## 0.1 - Proposed Solution"
+    "### 0.1 - Proposed Solution"
    ]
   },
   {
@@ -76,12 +76,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a557430-a96d-48fe-b7d4-1e11f4582e0a",
+   "metadata": {},
+   "source": [
+    "## 1 - Load Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c67e699-7967-4914-b02f-b1177bedd772",
+   "metadata": {},
+   "source": [
+    "### 1.0 - Import Packages"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4c3fbcf8-e5ff-4c93-8eee-ff1460d72000",
+   "execution_count": 1,
+   "id": "7c674c5c-d033-40c3-8772-6f59dbf371f5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import sys\n",
+    "import os\n",
+    "sys.path.append(os.path.join(\"..\", \"..\", \"..\", \"ChartExtractor\", \"src\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ffb11988-384c-4292-869e-da8f7cf48390",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from utilities.annotations import BoundingBox, Point"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cd127493-41a0-4698-ad3e-ae9c8f78dd6f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Point.__repr__ = lambda self: f\"Point({self.x}, {self.y})\" # todo: add a repr method to Point."
+   ]
   }
  ],
  "metadata": {
