Add section loading data and transforming it.

--- a/experiments/locating_number_boxes/locating_number_boxes.ipynb
+++ b/experiments/locating_number_boxes/locating_number_boxes.ipynb
@@ -105,13 +105,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "ffb11988-384c-4292-869e-da8f7cf48390",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2\n",
     "import json\n",
-    "from utilities.annotations import BoundingBox, Point"
+    "import numpy as np\n",
+    "from operator import attrgetter\n",
+    "from pathlib import Path\n",
+    "from PIL import Image\n",
+    "from typing import Dict, List, Tuple\n",
+    "from tqdm import tqdm\n",
+    "from utilities.annotations import BoundingBox, Point\n",
+    "from utilities.image_conversion import pil_to_cv2, cv2_to_pil"
    ]
   },
   {
@@ -123,6 +131,230 @@
    "source": [
     "Point.__repr__ = lambda self: f\"Point({self.x}, {self.y})\" # todo: add a repr method to Point."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fe9b5a5-6d03-4e39-bd5d-2bcae0ff0e2c",
+   "metadata": {},
+   "source": [
+    "### 1.1 - Import and Wrangle Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "0898ee56-a805-4cf5-9d00-4224d7fcb01a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_studio_to_bboxes(path_to_json_data: Path) -> List[BoundingBox]:\n",
+    "    json_data: List[Dict] = json.loads(open(str(path_to_json_data)).read())\n",
+    "    return {\n",
+    "        sheet_data['data']['image'].split(\"-\")[-1]:[\n",
+    "            BoundingBox(\n",
+    "                category=label['value']['rectanglelabels'][0],\n",
+    "                left=label['value']['x']/100,\n",
+    "                top=label['value']['y']/100,\n",
+    "                right=label['value']['x']/100+label['value']['width']/100,\n",
+    "                bottom=label['value']['y']/100+label['value']['height']/100,\n",
+    "            )\n",
+    "            for label in sheet_data['annotations'][0]['result']\n",
+    "        ]\n",
+    "        for sheet_data in json_data\n",
+    "    }\n",
+    "\n",
+    "\n",
+    "data_path: Path = Path(\"..\")/\"..\"/\"data\"\n",
+    "landmark_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(data_path/\"intraop_document_landmarks.json\")\n",
+    "numbox_location_data: Dict[str, List[BoundingBox]] = label_studio_to_bboxes(data_path/\"intraop_number_boxes.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7f40023b-b399-4212-ab83-68f3ac1400d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def homography_transform(\n",
+    "    src_image: Image.Image,\n",
+    "    src_points: List[Tuple[float, float]],\n",
+    "    dest_points: List[Tuple[float, float]],\n",
+    "    original_image_size: Tuple[float, float] = (3300, 2250),\n",
+    ") -> Tuple[List[List[float]], Image.Image]:\n",
+    "    \"\"\"Performs homography transformation on an image.\n",
+    "\n",
+    "    This function transforms an image (src_image) based on corresponding points\n",
+    "    between the source and destination images. It calculates the homography matrix\n",
+    "    and uses it to warp the source image to the perspective of the destination points.\n",
+    "\n",
+    "    Args:\n",
+    "        src_image (Image.Image):\n",
+    "            A PIL image object representing the source image.\n",
+    "        src_points (List[Tuple[int, int]]):\n",
+    "            A list of tuples (x, y) representing points in the source image that correspond\n",
+    "            to points in the destination image.\n",
+    "        dest_points (List[Tuple[int, int]]):\n",
+    "            A list of tuples (x, y) representing points in the destination image that points\n",
+    "            in the source image correspond to (where the source image should be warped to).\n",
+    "        original_image_size (Tuple[float, float]):\n",
+    "            A tuple (width, height) representing the size of the control image.\n",
+    "            Defaults to (3300, 2250).\n",
+    "\n",
+    "    Returns:\n",
+    "        A PIL image object representing the transformed source image.\n",
+    "\n",
+    "    Raises:\n",
+    "        ValueError:\n",
+    "            If the length of src_points and dest_points don't match (must have the same\n",
+    "            number of corresponding points), or if there are less than 4 points.\n",
+    "    \"\"\"\n",
+    "    src_points: np.ndarray = np.array(src_points)\n",
+    "    dest_points: np.ndarray = np.array(dest_points)\n",
+    "\n",
+    "    if len(src_points) != len(dest_points):\n",
+    "        raise ValueError(\n",
+    "            \"Source and destination points must have the same number of elements.\"\n",
+    "        )\n",
+    "    if len(src_points) < 4 or len(dest_points) < 4:\n",
+    "        raise ValueError(\"Must have 4 or more points to compute the homography.\")\n",
+    "\n",
+    "    src_image = pil_to_cv2(src_image)\n",
+    "    h, _ = cv2.findHomography(src_points, dest_points)\n",
+    "    dest_image = cv2.warpPerspective(src_image, h, original_image_size)\n",
+    "    return h, cv2_to_pil(dest_image)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "507b3ede-2884-482d-aae4-58034fa03008",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_corresponding_points(\n",
+    "    bboxes: List[BoundingBox], \n",
+    "    imsize: Tuple[int, int],\n",
+    "    categories_to_get: List[str] = ['anesthesia_start', 'lateral', 'safety_checklist', 'units']\n",
+    "):\n",
+    "    \"\"\"Gets the 'anesthesia_start', 'lateral', 'safety_checklist', and 'units' checkboxes\n",
+    "    from the list of bboxes.\n",
+    "\n",
+    "    Args:\n",
+    "        bboxes (List[BoundingBox]):\n",
+    "            All the checkbox bounding boxes labeled by the name of the box they indicate.\n",
+    "        imsize (Tuple[int, int]):\n",
+    "            The size of the image.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of tuples corresponding to the points 'anesthesia_start', 'lateral', \n",
+    "        'safety_checklist', and 'units' BoundingBox centers. The list is sorted\n",
+    "        by the category names to maintain consistency.\n",
+    "    \"\"\"\n",
+    "    points = list(map(\n",
+    "        attrgetter('center'),\n",
+    "        sorted(\n",
+    "            list(filter(lambda bb: bb.category in categories_to_get, bboxes)), \n",
+    "            key=lambda bb: bb.category\n",
+    "        )\n",
+    "    ))\n",
+    "    return [(p[0]*imsize[0], p[1]*imsize[1]) for p in points]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4b6cdad6-5af7-4013-b23a-761e2b0cc6f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "remap_point = lambda p, h: cv2.perspectiveTransform(np.array(p, dtype=np.float32).reshape(-1, 1, 2), h).tolist()[0][0]\n",
+    "\n",
+    "\n",
+    "def remap_bbox(\n",
+    "    bbox: BoundingBox, \n",
+    "    h, \n",
+    "    original_width:int=4032, \n",
+    "    original_height:int=3024,\n",
+    "    new_width:int=3300,\n",
+    "    new_height:int=2250,\n",
+    ") -> BoundingBox:\n",
+    "    \"\"\"Applys the remap_point function to a BoundingBox.\n",
+    "\n",
+    "    Args:\n",
+    "        bbox (BoundingBox):\n",
+    "            The bounding box to apply the homography to.\n",
+    "        h (np.ndarray):\n",
+    "            The homography matrix.\n",
+    "        original_width (int):\n",
+    "            The width of the original image.\n",
+    "        original_height (int):\n",
+    "            The height of the original image.\n",
+    "        new_width (int):\n",
+    "            The width of the destination image.\n",
+    "        new_height (int):\n",
+    "            The height of the destination image.\n",
+    "\n",
+    "    Returns:\n",
+    "        A BoundingBox that has been remapped to the new image via the homography matrix.\n",
+    "    \"\"\"\n",
+    "    new_left, new_top = remap_point((bbox.left*original_width, bbox.top*original_height), h)\n",
+    "    new_right, new_bottom = remap_point((bbox.right*original_width, bbox.bottom*original_height), h)\n",
+    "    return BoundingBox(bbox.category, new_left/new_width, new_top/new_height, new_right/new_width, new_bottom/new_height)\n",
+    "\n",
+    "\n",
+    "remap_all_bboxes = lambda bboxes, h: [remap_bbox(bb, h) for bb in bboxes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "01a6ab95-3e5e-4812-adb1-bcd459824240",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 20/20 [00:06<00:00,  3.12it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "landmark_names = [bb.category for bb in landmark_location_data[\"RC_0001_intraoperative.JPG\"]]\n",
+    "singleton_landmark_names = list(filter(lambda bb_name: landmark_names.count(bb_name) == 1, landmark_names))\n",
+    "singleton_landmark_location_data = {\n",
+    "    k:list(filter(lambda bb: bb.category in singleton_landmark_names, v))\n",
+    "    for (k, v) in landmark_location_data.items()\n",
+    "}\n",
+    "\n",
+    "remapped_data = dict()\n",
+    "remapped_numboxes = dict()\n",
+    "for im_name, boxes in tqdm(singleton_landmark_location_data.items()):\n",
+    "    if im_name==\"unified_intraoperative_preoperative_flowsheet_v1_1_front.png\":\n",
+    "        continue\n",
+    "    img = Image.open(str(data_path/\"chart_images\"/im_name))\n",
+    "    h, transformed_img = homography_transform(\n",
+    "        img, \n",
+    "        get_corresponding_points(boxes, img.size),\n",
+    "        get_corresponding_points(singleton_landmark_location_data[\"unified_intraoperative_preoperative_flowsheet_v1_1_front.png\"], (3300, 2250)),\n",
+    "    )\n",
+    "    remapped_boxes = remap_all_bboxes(boxes, h)\n",
+    "    try:\n",
+    "        remapped_cboxs = remap_all_bboxes(numbox_location_data[im_name], h)\n",
+    "    except:\n",
+    "        pass\n",
+    "    remapped_data[im_name] = remapped_boxes\n",
+    "    remapped_numboxes[im_name] = remapped_cboxs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58a4135d-1fb3-4e77-bfac-d5c4eb5d3863",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
