Add short cell getting centroids.

--- a/experiments/locating_number_boxes/locating_number_boxes.ipynb
+++ b/experiments/locating_number_boxes/locating_number_boxes.ipynb
@@ -407,9 +407,109 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2be62ac1-a28c-4d52-8c2d-b4c15036bdf0",
+   "metadata": {},
+   "source": [
+    "## 2.1 - Finding Centroids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "5beba3ca-3d1a-443a-8bda-8ab195916683",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "category_to_boxes_map = {\n",
+    "    category:list(filter(lambda numbx: numbx.category==category, all_numboxes_list))\n",
+    "    for category in list(set(c.category for c in all_numboxes_list))\n",
+    "}\n",
+    "centers = {\n",
+    "    category:[box.center for box in category_boxes]\n",
+    "    for (category, category_boxes) in category_to_boxes_map.items()\n",
+    "}\n",
+    "intraop_centroids = {\n",
+    "    category:(np.mean([c[0] for c in centers]), np.mean([c[1] for c in centers]))\n",
+    "    for (category, centers) in centers.items()\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "5ba31a87-c6ac-4dc3-908a-66bd80dc611d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'surg_end_hr_tens': (0.6176180022755308, 0.015278503574125947),\n",
+       " 'anes_end_min_tens': (0.9542628432765153, 0.012538828077372055),\n",
+       " 'ett_n_frac': (0.31126171398010744, 0.9854955283717105),\n",
+       " 'surg_start_min_ones': (0.48210404148132224, 0.014872488445705837),\n",
+       " 'surg_start_hr_tens': (0.38327809310986094, 0.014660948017187285),\n",
+       " 'code_row01_col0': (0.01917079274544115, 0.08271729300872624),\n",
+       " 'code_row00_col0': (0.01942217959171277, 0.05949021724232456),\n",
+       " 'code_row07_col2': (0.05596433028079677, 0.22384743388215003),\n",
+       " 'code_row02_col2': (0.05546253538968271, 0.10642912033705683),\n",
+       " 'code_row08_col2': (0.056058121944348394, 0.24705405573259323),\n",
+       " 'code_row02_col0': (0.019057947064510757, 0.10614207128335161),\n",
+       " 'code_row00_col1': (0.03754091174598706, 0.05948047927945679),\n",
+       " 'anes_end_hr_ones': (0.8898228403483851, 0.01356064486364175),\n",
+       " 'code_row08_col0': (0.019442880712627793, 0.24664226830911912),\n",
+       " 'code_row01_col2': (0.05538296542859724, 0.08299934949372945),\n",
+       " 'code_row04_col1': (0.037552336003791764, 0.15318047488920866),\n",
+       " 'code_row04_col2': (0.05561126562967256, 0.1534251766093293),\n",
+       " 'code_row03_col2': (0.05550269764195979, 0.12985959272775038),\n",
+       " 'code_row08_col1': (0.0380288104311321, 0.2467498158237391),\n",
+       " 'ett_n_whole': (0.29307093472762163, 0.9853537269279968),\n",
+       " 'code_row05_col0': (0.01909419432401277, 0.17646336677060492),\n",
+       " 'code_row06_col0': (0.01925715362816526, 0.1999739922417535),\n",
+       " 'anes_start_hr_ones': (0.15690161064671176, 0.013535831707959984),\n",
+       " 'code_row03_col0': (0.019067792177580572, 0.12942559350443167),\n",
+       " 'code_row06_col2': (0.05582663917845705, 0.20049815074184482),\n",
+       " 'code_row10_col0': (0.01965909866625042, 0.3588985331574378),\n",
+       " 'code_row07_col0': (0.019369470179556276, 0.22340287914610749),\n",
+       " 'code_row07_col1': (0.037902114478785075, 0.22360278106154055),\n",
+       " 'surg_end_hr_ones': (0.6355923992442932, 0.015294403421948526),\n",
+       " 'anes_end_hr_tens': (0.8714984588379685, 0.013963661879823919),\n",
+       " 'code_row05_col2': (0.055691581859923234, 0.1770274497584293),\n",
+       " 'code_row06_col1': (0.03785125397799308, 0.20027185665376002),\n",
+       " 'code_row09_col2': (0.05617835962030876, 0.336749239023666),\n",
+       " 'code_row03_col1': (0.03744473544034091, 0.1296097943936175),\n",
+       " 'surg_start_hr_ones': (0.4012700549647378, 0.014784945253740278),\n",
+       " 'anes_start_min_ones': (0.238469606244393, 0.01425633954722979),\n",
+       " 'surg_end_min_ones': (0.7164715897409539, 0.01567596875575551),\n",
+       " 'code_row01_col1': (0.037452838964629594, 0.08279027517218339),\n",
+       " 'code_row05_col1': (0.037714894855992075, 0.17659975643046416),\n",
+       " 'code_row10_col2': (0.05627478859641335, 0.3590584688242416),\n",
+       " 'surg_start_min_tens': (0.4643536445094448, 0.015006440536320557),\n",
+       " 'code_row00_col2': (0.05540155766683332, 0.059458604779159804),\n",
+       " 'code_row02_col1': (0.03745591232080779, 0.10623284751490543),\n",
+       " 'code_row04_col0': (0.01901606080634742, 0.1529534512346948),\n",
+       " 'surg_end_min_tens': (0.6986830891148326, 0.015475943565368654),\n",
+       " 'code_row09_col1': (0.03812953699528696, 0.3366697619700292),\n",
+       " 'anes_start_hr_tens': (0.13884157074315315, 0.013197427130582038),\n",
+       " 'anes_end_min_ones': (0.9723919804282545, 0.012362277348836262),\n",
+       " 'code_row09_col0': (0.01955058564789938, 0.3364746400710435),\n",
+       " 'code_row10_col1': (0.03826478924667626, 0.3589988256978709),\n",
+       " 'anes_start_min_tens': (0.22074194462485672, 0.014196872069821722)}"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "intraop_centroids"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4b8a90aa-aaf3-406d-9610-15bb9f4c8e3f",
+   "id": "f8a3f557-8b2e-4300-9c9c-b88d7d39b52a",
    "metadata": {},
    "outputs": [],
    "source": []
