Dump centroids to json and add implementation.

--- a/experiments/locating_number_boxes/locating_number_boxes.ipynb
+++ b/experiments/locating_number_boxes/locating_number_boxes.ipynb
@@ -508,11 +508,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f8a3f557-8b2e-4300-9c9c-b88d7d39b52a",
+   "execution_count": 43,
+   "id": "433f8528-36d4-4282-8edc-7c793d51e90c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open(\"intraop_number_box_centroids.json\", 'w') as file:\n",
+    "    file.write(json.dumps(intraop_centroids))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64d18ae3-e247-470a-9586-0b4ef0250955",
+   "metadata": {},
+   "source": [
+    "## 3 - Implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c85bb3cc-7435-450e-a511-f31d5da7897f",
+   "metadata": {},
+   "source": [
+    "This implementation represents a more generalized version than that of the checkbox labeling."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "c2d48c1b-1ac6-4f69-9b81-8bcd887571d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filepath consts will be changed in the real implementation.\n",
+    "FILEPATH_TO_INTRAOP_NUMBER_BOX_CENTROIDS = \"intraop_number_box_centroids.json\"\n",
+    "INTRAOP_NUMBER_BOX_CENTROIDS: Dict[str, Tuple[float, float]] = json.load(\n",
+    "    open(FILEPATH_TO_INTRAOP_NUMBER_BOX_CENTROIDS, 'r')\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def match_boundingboxes_to_centroids(\n",
+    "    bounding_boxes: List[BoundingBox],\n",
+    "    centroids: Dict[str, Tuple[float, float]],\n",
+    "    threshold: float=0.025,\n",
+    ") -> Dict[str, str]:\n",
+    "    \"\"\"Matches bounding boxes to the closest centroid.\n",
+    "\n",
+    "    The bounding boxes must be the locations after image registration, or else they \n",
+    "    will be incorrect due to the naive nature of this solution, which is to merely \n",
+    "    find the closest bounding box based on the centroid of a sample of 10 ground-truth\n",
+    "    charts.\n",
+    "    \n",
+    "    Args:\n",
+    "        bounding_boxes (List[BoundingBox]):\n",
+    "            The BoundingBoxes to match.\n",
+    "        centroids (Dict[str, Tuple[float, float]]):\n",
+    "            The centroids of a sample of 10 checkboxes.\n",
+    "        threshold (float):\n",
+    "            The threshold that determines how far a centroid can be before it \n",
+    "            is totally ruled out. If all centroids are more than the threshold away, \n",
+    "            there is no associated name for that BoundingBox. Defaults to 2.5% of the\n",
+    "            image's width and height.\n",
+    "\n",
+    "    Returns:\n",
+    "        A dictionary that maps the name of the centroid to the BoundingBox's category.\n",
+    "    \"\"\"\n",
+    "    def distance(p1: Tuple[float, float], p2: Tuple[float, float]) -> float:\n",
+    "        \"\"\"Computes euclidean distance.\"\"\"\n",
+    "        return np.sqrt((p1[0]-p2[0])**2 + (p1[1]-p2[1])**2)\n",
+    "\n",
+    "    bounding_box_values: Dict[str, str] = dict()\n",
+    "    for ckbx in bounding_boxes:\n",
+    "        distance_to_all_centroids: Dict[str, float] = {\n",
+    "            name:distance(ckbx.center, centroid)\n",
+    "            for (name, centroid) in centroids.items()\n",
+    "        }\n",
+    "        \n",
+    "        bbox_too_far_from_any_centroid: bool = all(\n",
+    "            [dist > threshold for dist in list(distance_to_all_centroids.values())]\n",
+    "        )\n",
+    "        if bbox_too_far_from_any_centroid:\n",
+    "            continue\n",
+    "        \n",
+    "        closest_bounding_box_centroid: str = min(\n",
+    "            distance_to_all_centroids, \n",
+    "            key=distance_to_all_centroids.get\n",
+    "        )\n",
+    "        bounding_box_values[closest_bounding_box_centroid] = ckbx.category\n",
+    "\n",
+    "    return bounding_box_values\n",
+    "\n",
+    "\n",
+    "def find_interaoperative_number_box_names(\n",
+    "    intraoperative_number_boxes: List[BoundingBox], \n",
+    "    threshold: float=0.025\n",
+    ") -> Dict[str, str]:\n",
+    "    \"\"\"Finds the names of intraoperative number boxes.\"\"\"\n",
+    "    return match_boundingboxes_to_centroids(\n",
+    "        intraoperative_number_boxes, \n",
+    "        INTRAOP_NUMBER_BOX_CENTROIDS, \n",
+    "        threshold\n",
+    "    )"
+   ]
   }
  ],
  "metadata": {
