--- a/utilities/conversion/apply_homography_to_labels.ipynb
+++ b/utilities/conversion/apply_homography_to_labels.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "5f322da5-10f8-49ee-a81a-5edc7bac12cd",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "95997450-a2a0-4035-b040-3c8fb532836b",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "820c4efa-bb9c-489c-9e44-07417836f3e4",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "7ca02ed3-a7fc-44ea-9f47-2c3b90a0ea48",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "cd2294bd-3749-4872-b7e8-918218191c88",
    "metadata": {},
    "outputs": [],
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "3a24eb52-c5f0-4c69-972f-6193117efe19",
    "metadata": {},
    "outputs": [],
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "36bfc243-75e8-4aff-ba61-5a92a06ba7b6",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "id": "a18e97c6-e438-461a-a701-2bf320da275f",
    "metadata": {},
    "outputs": [],
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "7bb3dbbb",
    "metadata": {},
    "outputs": [],
@@ -346,26 +346,30 @@
     "    if show_images:\n",
     "        pil_img.show()\n",
     "\n",
-    "    # Draw bounding boxes on the image\n",
-    "    generate_color = lambda: \"#%06x\" % random.randint(0, 0xFFFFFF)\n",
-    "    draw = ImageDraw.Draw(pil_img)\n",
+    "    # Save original image wih bounding boxes\n",
+    "    # Make a copy of the image\n",
+    "    pil_img_no_boxes = pil_img.copy()\n",
+    "    pil_img_no_boxes = pil_img.resize((800, 600))\n",
     "\n",
-    "    for bounding_box in remapped_locations:\n",
-    "        box = [\n",
-    "            bounding_box.left*unified_width,\n",
-    "            bounding_box.top*unified_height,\n",
-    "            bounding_box.right*unified_width,\n",
-    "            bounding_box.bottom*unified_height,\n",
-    "        ]\n",
-    "        draw.rectangle(box, outline=generate_color(), width=3)\n",
-    "    pil_img.resize((800, 600))\n",
-    "\n",
-    "    # If show_images is true show image\n",
+    "    # You only need to do this drawing if we are intentionally being visual\n",
     "    if show_images:\n",
+    "        # Draw bounding boxes on the image\n",
+    "        generate_color = lambda: \"#%06x\" % random.randint(0, 0xFFFFFF)\n",
+    "        draw = ImageDraw.Draw(pil_img)\n",
+    "\n",
+    "        for bounding_box in remapped_locations:\n",
+    "            box = [\n",
+    "                bounding_box.left*unified_width,\n",
+    "                bounding_box.top*unified_height,\n",
+    "                bounding_box.right*unified_width,\n",
+    "                bounding_box.bottom*unified_height,\n",
+    "            ]\n",
+    "            draw.rectangle(box, outline=generate_color(), width=3)\n",
+    "        pil_img.resize((800, 600))\n",
+    "\n",
     "        pil_img.show()\n",
-    "        \n",
-    "    # Save the image\n",
-    "    pil_img.save(path_to_registered/path_to_sheet.name)\n",
+    "\n",
+    "    pil_img_no_boxes.save(path_to_registered/path_to_sheet.name)\n",
     "\n",
     "    return remapped_locations"
    ]
@@ -382,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "77c8599f",
    "metadata": {},
    "outputs": [
