Accuracy among time stamps in 99.75%. Among number labels it is found to be 100%.

--- a/experiments/clustering/clustering.ipynb
+++ b/experiments/clustering/clustering.ipynb
@@ -509,27 +509,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Create Cluster Mapping\n",
-    "Contains a cluster number that maps list of numbers that belong to that cluster *in-order*\n",
+    "#### Analyze accuracy\n",
     "\n",
-    "This will allow us to easily impute meanings of the labels since we have them split by time and number (mmHg and HR)"
+    "Below we use assumptions on what we know the labels should represent in both the time and number groups. We check that these values are present within clusters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[27], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# For each cluster in time cluster, sort by left most to right most\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m cluster \u001b[38;5;129;01min\u001b[39;00m time_clusters:\n\u001b[1;32m---> 18\u001b[0m     cluster \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43msorted\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mcluster\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     19\u001b[0m final_time_clusters[sheet] \u001b[38;5;241m=\u001b[39m time_clusters\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(NUMBER_JSON, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msheet\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "Cell \u001b[1;32mIn[27], line 18\u001b[0m, in \u001b[0;36m<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;66;03m# For each cluster in time cluster, sort by left most to right most\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m cluster \u001b[38;5;129;01min\u001b[39;00m time_clusters:\n\u001b[1;32m---> 18\u001b[0m     cluster \u001b[38;5;241m=\u001b[39m \u001b[38;5;28msorted\u001b[39m(cluster, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mx\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m \u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     19\u001b[0m final_time_clusters[sheet] \u001b[38;5;241m=\u001b[39m time_clusters\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(NUMBER_JSON, \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00msheet\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m'\u001b[39m)) \u001b[38;5;28;01mas\u001b[39;00m f:\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time labels: 796 correct clusters, 2 incorrect clusters. The accuracy is 99.75%\n",
+      "Number labels: 380 correct clusters, 0 incorrect clusters. The accuracy is 100.00%\n"
      ]
     }
    ],
@@ -541,11 +536,15 @@
     "TIME_JSON = os.path.join(PATH_TO_KMEANS_RESULTS, 'time')\n",
     "NUMBER_JSON = os.path.join(PATH_TO_KMEANS_RESULTS, 'number')\n",
     "\n",
-    "final_time_clusters = {}\n",
-    "final_number_clusters = {}\n",
-    "\n",
+    "time_wrong_clusters_count = 0\n",
+    "time_correct_clusters_count = 0\n",
+    "number_wrong_clusters_count = 0\n",
+    "number_correct_clusters_count = 0\n",
     "# Iterate over all images and their bounding boxes\n",
     "for sheet, bounding_boxes in yolo_data.items():\n",
+    "    expected_time_values = [0,5,10,15,20,25,30,35,40,45,50,55,0,5,10,15,20,25,30,35,40,45,50,55,0,5,10,15,20,25,30,35,40,45,50,55,0,5,10,15,20,25]\n",
+    "    expected_number_values = [30,40,50,60,70,80,90,100,110,120,130,140,150,160,170,180,190,200,210,220]\n",
+    "\n",
     "    # Load JSON\n",
     "    with open(os.path.join(TIME_JSON, f'{sheet}.json')) as f:\n",
     "        time_clusters = json.load(f)\n",
@@ -553,62 +552,36 @@
     "    # Each cluster contains the number (integer) that the cluster represents\n",
     "    # We know what integers should be represented in the time labels, lets check that they are all there.\n",
     "    # Keep track of any false positives (new clusters that don't exist) or negatives (missing clusters)\n",
+    "    for cluster, value in time_clusters.items():\n",
+    "        if value not in expected_time_values:\n",
+    "            # We have an erroneous cluster\n",
+    "            time_wrong_clusters_count += 1\n",
+    "        else:\n",
+    "            # We have a correct cluster\n",
+    "            expected_time_values.remove(value)\n",
+    "            time_correct_clusters_count += 1\n",
+    "\n",
+    "    # Load JSON\n",
+    "    with open(os.path.join(NUMBER_JSON, f'{sheet}.json')) as f:\n",
+    "        number_clusters = json.load(f)\n",
     "    \n",
     "\n",
-    "    \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Analyze accuracy\n",
-    "\n",
-    "Below we use assumptions on what we know the labels should represent in both the time and number groups. We check that these values are present within clusters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'relevant_bounding_boxes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[7], line 23\u001b[0m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m index, value \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[0;32m     20\u001b[0m       \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m  Index \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mindex\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mvalue\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 23\u001b[0m relevant_numbers \u001b[38;5;241m=\u001b[39m [box\u001b[38;5;241m.\u001b[39msplit(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m)[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;28;01mfor\u001b[39;00m box \u001b[38;5;129;01min\u001b[39;00m \u001b[43mrelevant_bounding_boxes\u001b[49m]\n\u001b[0;32m     24\u001b[0m print_classes_and_values(labels, relevant_numbers)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'relevant_bounding_boxes' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "def print_classes_and_values(classes, values):\n",
-    "  \"\"\"Prints the class number followed by all the indices and values belonging to that class.\n",
-    "\n",
-    "  Args:\n",
-    "    classes: A list of class labels for each value.\n",
-    "    values: A list of values.\n",
-    "  \"\"\"\n",
-    "\n",
-    "  # Create a dictionary to store indices and values by class\n",
-    "  class_data = {}\n",
-    "  for i, class_label in enumerate(classes):\n",
-    "    if class_label not in class_data:\n",
-    "      class_data[class_label] = []\n",
-    "    class_data[class_label].append((i, values[i]))\n",
-    "\n",
-    "  # Print the class number followed by the indices and values\n",
-    "  for class_label, data in class_data.items():\n",
-    "    print(f\"Class {class_label}:\")\n",
-    "    for index, value in data:\n",
-    "      print(f\"  Index {index}: {value}\")\n",
+    "    # Each cluster contains the number (integer) that the cluster represents\n",
+    "    # We know what integers should be represented in the time labels, lets check that they are all there.\n",
+    "    # Keep track of any false positives (new clusters that don't exist) or negatives (missing clusters)\n",
+    "    for cluster, value in number_clusters.items():\n",
+    "        if value not in expected_number_values:\n",
+    "            # We have an erroneous cluster\n",
+    "            number_wrong_clusters_count += 1\n",
+    "        else:\n",
+    "            # We have a correct cluster\n",
+    "            expected_number_values.remove(value)\n",
+    "            number_correct_clusters_count += 1\n",
+    "    \n",
     "\n",
     "\n",
-    "relevant_numbers = [box.split(\" \")[0] for box in relevant_bounding_boxes]\n",
-    "print_classes_and_values(labels, relevant_numbers)\n"
+    "print(f\"Time labels: {time_correct_clusters_count} correct clusters, {time_wrong_clusters_count} incorrect clusters. The accuracy is {time_correct_clusters_count / (time_correct_clusters_count + time_wrong_clusters_count) * 100:.2f}%\")\n",
+    "print(f\"Number labels: {number_correct_clusters_count} correct clusters, {number_wrong_clusters_count} incorrect clusters. The accuracy is {number_correct_clusters_count / (number_correct_clusters_count + number_wrong_clusters_count) * 100:.2f}%\")\n"
    ]
   }
  ],
